--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
@@ -23,6 +24,8 @@
     "expo-av": "^12.0.4",
     "expo-camera": "~12.3.0",
     "expo-constants": "^13.2.4",
+    "expo-fast-image": "^1.1.3",
+    "expo-file-system": "~14.1.0",
     "expo-font": "^10.1.0",
     "expo-image-manipulator": "^10.4.0",
     "expo-image-picker": "~12.0.1",
@@ -35,10 +38,12 @@
     "expo-updates": "~0.11.7",
     "expo-web-browser": "~10.1.0",
     "form-data": "^4.0.0",
+    "patch-package": "^6.5.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-dropdownalert": "^4.5.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-google-places-autocomplete": "^2.4.1",
@@ -46,7 +51,7 @@
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "^0.31.1",
+    "react-native-maps": "^1.3.2",
     "react-native-paper": "^4.12.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.2.4",
