--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^2.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -22,6 +24,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.5.0",
     "expo-av": "^12.0.4",
+    "expo-build-properties": "~0.3.0",
     "expo-camera": "~12.3.0",
     "expo-constants": "^13.2.4",
     "expo-fast-image": "^1.1.3",
@@ -32,6 +35,7 @@
     "expo-linear-gradient": "^11.4.0",
     "expo-linking": "~3.1.0",
     "expo-location": "^14.3.0",
+    "expo-screen-orientation": "~4.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.2.0",
@@ -40,6 +44,7 @@
     "form-data": "^4.0.0",
     "patch-package": "^6.5.0",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-dropdownalert": "^4.5.1",
@@ -60,7 +65,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.7",
     "react-native-webview": "^11.22.2",
     "styled-components": "^5.3.5"
   },
