--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-community/geolocation": "^2.1.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "9.3.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -57,6 +59,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "^1.3.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^4.12.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.2.4",
